--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
           <div class="hero-unit">
             <h1>{{title}}</h1>
             <p>{{instructions}}</p>
-            <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-          </div><!--/row-->
-		  <div class="span12">
+          </div><!--/hero-->
+        </div><!--/span-->
+		  
 			{{ prehtmlcontent }}
 			{% if formaction %}
 			<form id="TVForm" action="{{ formaction }}" method="post">
@@ -71,14 +71,13 @@
 			</form>
 			{% endif %}
 			{{ posthtmlcontent }}
-		  </div>
-        </div><!--/span-->
+		  
       </div><!--/row-->
 
       <hr>
 
       <footer>
-        <p>Made with Google App Engine and Twitter's Bootstrap</p>
+        <p>Made with <a href="https://developers.google.com/appengine/">Google App Engine</a> and <a href="http://twitter.github.com/bootstrap/">Twitter's Bootstrap</a> using data from the <a href="http://www.radiotimes.com/">Radio times</a>. Data provided by the Radio Times is for personal use only, please run your own copy of this code to use the data.</p>
       </footer>
 
     </div><!--/.fluid-container-->
