More work on appearance - this time the confirmation screen

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
             <p>{{instructions}}</p>
           </div><!--/hero-->
         </div><!--/span-->
-		  
+      </div><!--/row-->
+		
+      <div class="row-fluid">  
 			{{ prehtmlcontent }}
 			{% if formaction %}
 			<form id="TVForm" action="{{ formaction }}" method="post">
