User stuff added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
-            <p class="navbar-text pull-right">Logged in as <a href="#">username</a></p>
+		
+            <p class="navbar-text pull-right">Logged in as {{ username }} <a href="{{ logouturl }}">Sign out</a></p>
+
           </div><!--/.nav-collapse -->
         </div>
       </div>
