even more breaking up of files for easy management

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <hr>
 
       <footer>
-        <p>Made with <a href="https://developers.google.com/appengine/">Google App Engine</a> and <a href="http://twitter.github.com/bootstrap/">Twitter's Bootstrap</a> using data from the <a href="http://www.radiotimes.com/">Radio times</a>. Data provided by the Radio Times is for personal use only, please run your own copy of this code to use the data.</p>
+        <p>Made with <a href="https://developers.google.com/appengine/">Google App Engine</a> and <a href="http://twitter.github.com/bootstrap/">Twitter's Bootstrap</a> using data from the <a href="http://www.radiotimes.com/">Radio Times</a>. Data provided by the Radio Times is for personal use only, please run your own copy of this code to use the data.</p>
       </footer>
 
     </div><!--/.fluid-container-->
